<resources>
    <string name="app_name">Mini_Project_1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Copied texts -->
    <string name="title_activity_map_home">iOrientation</string>
    <string name="location_name">Event Title</string>
    <string name="date">Date :</string>
    <string name="description">description</string>
    <string name="preview_submit"><![CDATA[Preview & submit]]></string>
    <string name="add_location">Pin Location Here</string>
    <string name="primary_short">Something</string>
    <string name="subtext">Otherthing</string>
    <string name="action_1">Action1</string>
    <string name="action_2">Action2</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Explore more</string>
    <string name="backdrop_title">Delight Story</string>
    <string name="backdrop_subtitle">Top Story nearby you</string>
    <string name="tab_map">Home Screen</string>
    <string name="tab_story">Story</string>
    <string name="tab_add">ADD</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_story_map">Map</string>
    <string name="title_activity_drawer_activity">drawer_activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
